@@ -48,6 +48,13 @@ defined( $ENV{debug} ) and $FAI::debug = $ENV{debug};
 
 ################################################################################
 #
+# @brief The command to tell udev to settle (udevsettle or udevadm settle)
+#
+################################################################################
+$FAI::udev_settle = undef;
+
+################################################################################
+#
 # @brief The lists of disks of the system
 #
 ################################################################################
