@@ -23,6 +23,9 @@ fai (3.2.21) unstable; urgency=low
   [ Michael Tautschnig ]
   * setup-storage/Parser.pm: Set the boot flag on partition mounted at /, if
     bootable is not explicitly set.
+  * setup-storage, setup-storage/Exec.pm: auto-detect a proper way to tell
+    udev to settle (udevsettle is used in etch, udevadm settle for sid; thanks
+    matrix.systems@matrix.msu.edu for a first patch). (closes: #530656)
   
  -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200
 
